# kpe-streaming

./: .gitignore  .gitmodules  CMakeLists.txt  KlepsydraStreamingConfig.cmake.in  KlepsydraStreamingConfigVersion.cmake.in  LICENSE.md  README.md
.github/workflows/: prcodecheck.yml  push.yml
modules/: CMakeLists.txt
modules/streaming/: CMakeLists.txt
modules/streaming/include/klepsydra/streaming/: aligned_allocator.h  data_multiplexer_factory.h  data_multiplexer_factory_char.h  data_multiplexer_factory_char_impl.h  data_multiplexer_factory_float32.h  data_multiplexer_factory_float32_impl.h  data_multiplexer_factory_impl.h  data_multiplexer_factory_provider.h  data_multiplexer_publish_subscribe_factory.h  default_thread_distribution_policy.h  default_thread_distribution_policy_factory_impl.h  event_emitter_factory.h  event_emitter_publish_subscribe_factory.h  event_emitter_publish_subscribe_factory_char.h  event_emitter_publish_subscribe_factory_float32.h  event_loop_factory.h  event_loop_publish_subscribe_factory.h  event_loop_publish_subscribe_factory_char.h  event_loop_publish_subscribe_factory_float32.h  generic_event_emitter_publish_subscribe_factory.h  generic_event_loop_publish_subscribe_factory.h  generic_publish_subscribe_factory.h  generic_smart_publish_subscribe_factory.h  json_thread_distribution_policy.h  publish_subscribe_factory.h  publish_subscribe_factory_char.h  publish_subscribe_factory_float32.h  smart_publish_subscribe_factory.h  stream_internal_types.h  streaming_configuration.h  streaming_configuration_manager.h  streaming_factory_provider.h  streaming_policy.h  streaming_types.h  sync_data_multiplexer_factory.h  sync_data_multiplexer_factory_char.h  sync_data_multiplexer_factory_float32.h  thread_distribution_policy.h  thread_distribution_policy_factory.h  visibility.h
modules/streaming/src/: data_multiplexer_factory_char.cpp  data_multiplexer_factory_float32.cpp  data_multiplexer_factory_float32_impl.cpp  data_multiplexer_factory_impl.cpp  default_thread_distribution_policy.cpp  default_thread_distribution_policy_factory_impl.cpp  event_emitter_publish_subscribe_factory.cpp  event_emitter_publish_subscribe_factory_char.cpp  event_emitter_publish_subscribe_factory_float32.cpp  event_loop_factory.cpp  event_loop_publish_subscribe_factory.cpp  event_loop_publish_subscribe_factory_char.cpp  event_loop_publish_subscribe_factory_float32.cpp  streaming_configuration.cpp  streaming_configuration_manager.cpp  streaming_factory_provider.cpp  streaming_policy.cpp  sync_data_multiplexer_factory.cpp  sync_data_multiplexer_factory_float32.cpp
tests/: CMakeLists.txt
tests/data/: streaming_conf.json  streaming_conf.json.in  streaming_conf.yaml
tests/streaming_tests/: CMakeLists.txt
tests/streaming_tests/include/: test_fixture.h
tests/streaming_tests/src/: data_multiplexer_factory_impl_test.cpp  event_emitter_factory_tests.cpp  event_emitter_publish_subscribe_factory_tests.cpp  event_loop_data_multiplexer_integration_test.cpp  eventloop_factory_test.cpp  eventloop_publish_subscribe_factory_tests.cpp  generic_event_emitter_publish_subscribe_factory_tests.cpp  generic_eventloop_publish_subscribe_factory_tests.cpp  generic_smart_publish_subscribe_factory_tests.cpp  main.cpp  smart_publish_subscribe_factory_tests.cpp  streaming_configuration_manager_tests.cpp  streaming_configuration_tests.cpp  streaming_factory_provider_test.cpp
